initial index and style commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
-under construction
+ <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>My Portfolio</title>
+  <link href="style.css" rel="stylesheet" type="text/css" media="all">
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
+</head>
+<body>
+
+
+<header id='head'>
+  <h1>Ruben Magallanes</h1>
+  <h3>Some of my work</h3>
+  
+  <p id='links'>links<br>
+    <a href='https://github.com/RubenMagallanes'>~github</a>
+    <a href='https://nz.linkedin.com/in/rubenmagallanes'>~linkedin</a>
+  </p>
+
+</header>
+
+<h4>MDDN242 - Creative Coding II</h4>
+<p class='descrip'>The following 3 projects are all written in 'Processing' which is pretty much a java library and a development environment. The Processing environment makes GUI and visual programs really easy to do, handling GUI creating and rendering so you can focus on the algorithms to produce the visualisations.<br>
+I received an 'A' grade in this course. 
+</p>
+<div class='item'>
+  <div> <!--head section-->
+    <p class='align_left'>Project 1: 'Awkward Clock' </p>
+    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_1-clock' title='link to source code and instructions on how to get it running'>~github link</a></p>
+    <div style="clear: both;"></div>
+  </div>
+  <div ><!--main text-->
+    <div ><p ><img class='image' src="watch_colors.gif" width="50%" height="50%"  border="0px"></p></div>
+      <p class='paragraph'>The 'Relax' clock. designed to stop you worrying about individual minutes in a day. It is a purposefully vague clock, giving only a rough indication of the current minute or hour. This clock was designed to be both less than and more than a clock or timepiece. While this clock does allow you to keep track of the important times of your day, when those said times aren't urgently soon, it is more like an art-piece and exists only to please the eye and provide colour.
+      </p>
+      <p class='paragraph'>The colorscheme of the clock changes depending on the time of day. The two coloured discs on the watch face keep track of the current hour and minute. The line in the center of the face marks the current color band of each disc's time- this is intentionally vague, to stop you worrrying about each individual minute. <br>
+      The current color of the large disc, pointed to by the pointer (along with the sun outside) gives an indication of the current time of day, and rotates once every 24 hours. <br>
+      The smaller disc rotates once per minute, but apart from the constant movement, gives no indication of the exact time. 
+
+      </p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+<div class='break'></div>
+
+<div class='item'>
+  <div> <!--head section-->
+    <p class='align_left'>Project 2: 'Music Visualiser' </p>
+    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_2-music_visualiser' title='link to source code and instructions on how to get it running'>~github link</a></p>
+    <div style="clear: both;"></div>
+  </div>
+  <div ><!--main text-->
+    <div ><p ><img class='image' src="visualiser.gif" width="50%" height="50%"  border="0px"></p></div>
+      <p class='paragraph'>This is a relatively simple music visualiser, utilizing the 'Minim' API to get data about the currently playing song, and display a colorful equaliser. </p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+<div class='break'></div>
+
+<div class='item'>
+  <div> 
+    <p class='align_left'>Project 3: Game</p>
+    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_3-game' title='link to source code and instructions on how to get it running'>~github link'</a></p>
+    <div style="clear: both;"></div>
+  </div>
+  <div >
+    <div ><p ><img class='image' src="game.gif" width="50%" height="50%"  border="0px"></p></div>
+      <p class='paragraph'>This is a simple 'wasd' + mouse based top-down shooter. It is purposely incredibly difficult to complete and quick to restart, this makes it pretty fun as it's a significant achievement to complete even one level.<br>
+      The difficulty is backed up by the music which i wrote to sound exciting and stressful. <a href="music.mp3" style="text-decoration: underline;">Music link</a>
+      </p>
+      <p>
+        The game utilizes a quad tree for hit-detection, as well as HashLists for storing and referencing game objects for efficiency. 
+      </p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+<h4>MDDN243 - Introduction to game design</h4>
+<p class='descrip'> I received an 'A' grade for this course</p>
+
+<div class='break'></div>
+
+<div class='item'>
+  <div> 
+    <p class='align_left'>Game mechanic analysis presentation</p>
+    <p><a class='align_right' href='game_mechanic_presentation.pdf' title='direct link to a pdf of the presentation slides'>~link to pdf of presentation'</a></p>
+    <div style="clear: both;"></div>
+  </div>
+  <div >
+    <div ><p ><img class='image' src="presentation.gif" width="50%" height="50%"  border="0px"></p></div>
+      <p class='paragraph'>This presentations was a small task to get us to analyse a few game mechanics and to get us thinking a bit deeper about the slight differences in the way a mechanic can be implemented.<br>
+      The task was to pick 3 game mechanics, and talk a bit about each. This included describing what the mechanic is, explaining the effects the mechanic has on a game it's implemented in and slight variations on the mechanic, using games where it is implemented as an example. <br>
+      
+       </p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+
+<!--            'coming soon' footer thingie         -->
+<div class='break'></div>
+
+<div class='item' id='foot'>
+  <div> <!--head section-->
+    <p class='align_left'>~ More to come</p>
+    <p><a class='align_right' href='https://github.com/rubenmagallanes' title='my github'>~</a></p>
+    <div style="clear: both;"></div>
+  </div>
+  <div ><!--main text-->
+
+      <p class='paragraph'></p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+
+</body>
+</html>
