add D3 UI design demo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I received an 'A' grade in this course.
 <div class='item'>
   <div> 
     <p class='align_left'>Project 3: Game</p>
-    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_3-game' title='link to source code and instructions on how to get it running'>~github link'</a></p>
+    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_3-game' title='link to source code and instructions on how to get it running'>~github link</a></p>
     <div style="clear: both;"></div>
   </div>
   <div >
@@ -89,7 +89,7 @@ I received an 'A' grade in this course.
 <div class='item'>
   <div> 
     <p class='align_left'>Game mechanic analysis presentation</p>
-    <p><a class='align_right' href='game_mechanic_presentation.pdf' title='direct link to a pdf of the presentation slides'>~link to pdf of presentation'</a></p>
+    <p><a class='align_right' href='game_mechanic_presentation.pdf' title='direct link to a pdf of the presentation slides'>~link to pdf of presentation</a></p>
     <div style="clear: both;"></div>
   </div>
   <div >
@@ -98,6 +98,32 @@ I received an 'A' grade in this course.
       The task was to pick 3 game mechanics, and talk a bit about each. This included describing what the mechanic is, explaining the effects the mechanic has on a game it's implemented in and slight variations on the mechanic, using games where it is implemented as an example. <br>
       
        </p>
+      <br style="clear:both" />
+
+  </div>
+</div>
+
+<div class='break'></div>
+
+<div class='item'>
+  <div> <!--head section-->
+    <p class='align_left'>UI design project - D3 demo</p>
+    <p>
+      <p class='align_right'>
+         <a  href='D3/index.html' title='links to an HTML D3 demo'>~link to demo page</a>
+         <a  href='https://github.com/RubenMagallanes/user_interface_dsdn-D3_demo' title='link to github page of source'>~Github link</a>
+      </p>
+    </p>
+    <div style="clear: both;"></div>
+  </div>
+  <div ><!--main text-->
+    <div ><p ><img class='image' src="UI.png" width="50%" height="50%"  border="0px"></p></div>
+      <p class='paragraph'>
+        This is a simple application to demonstrate an understand of the D3 javascript library. <br>
+        The task was to design an interface for a simple app that would be suitable for an "Optical head-mounted display", similar to Google's "Google Glass" project. The requirements included a simple interface that required only very basic controls- for example in the situation a user can only interect with their device with only swipe gestures (reprisented here as the arrow buttons). <br>
+        This Demo was implemented as an html page, becasue this allowed me to utilize the D3 javascript library, which is used to visualise data.
+
+      </p>
       <br style="clear:both" />
 
   </div>
