--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@ I received an 'A' grade in this course.
   </div>
 </div>
 
+<h4>SWEN 303 - Introduction to User Interface Design</h4>
+<p class='descrip'> </p>
+
+
 <div class='break'></div>
 
 <div class='item'>
@@ -120,8 +124,9 @@ I received an 'A' grade in this course.
     <div ><p ><img class='image' src="UI.png" width="50%" height="50%"  border="0px"></p></div>
       <p class='paragraph'>
         This is a simple application to demonstrate an understand of the D3 javascript library. <br>
-        The task was to design an interface for a simple app that would be suitable for an "Optical head-mounted display", similar to Google's "Google Glass" project. The requirements included a simple interface that required only very basic controls- for example in the situation a user can only interect with their device with only swipe gestures (reprisented here as the arrow buttons). <br>
-        This Demo was implemented as an html page, becasue this allowed me to utilize the D3 javascript library, which is used to visualise data.
+        The task was to design an interface for a simple app that would be suitable for an "Optical head-mounted display", similar to Google's "Google Glass" project. The requirements included a simple interface that required only very basic controls- for example in the situation a user can only interect with their device with only swipe gestures. <br>
+        This Demo was implemented as an html page, becasue this allowed me to utilize the D3 javascript library, which is used to visualise data. <br><br>
+        The app is a simple weather viewer, displaying the weather for a day and city. The interface allows you to swipe between cities vertically and days horisontally. Swiping is represented here as the arrow buttons that border the interface. 
 
       </p>
       <br style="clear:both" />
