--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header id='head'>
   <h1>Ruben Magallanes</h1>
-  <h3>Some of my work</h3>
+  <h3>[ Software Developer ]</h3>
   
   <p id='links'>links<br>
     <a href='https://github.com/RubenMagallanes'>~github</a>
@@ -20,138 +20,33 @@
 
 </header>
 
-<h4>MDDN242 - Creative Coding II</h4>
-<p class='descrip'>The following 3 projects are all written in 'Processing' which is pretty much a java library and a development environment. The Processing environment makes GUI and visual programs really easy to do, handling GUI creating and rendering so you can focus on the algorithms to produce the visualisations.<br>
-I received an 'A' grade in this course. 
-</p>
-<div class='item'>
-  <div> <!--head section-->
-    <p class='align_left'>Project 1: 'Awkward Clock' </p>
-    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_1-clock' title='link to source code and instructions on how to get it running'>~github link</a></p>
-    <div style="clear: both;"></div>
+<div>
+ <p>Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+ <p >
+  Brief: <br /><br />
+  
+  
+  <span class="year">~2017</span><br />
+  <div class="year-text">
+  > Participated in an 'AR/VR Hackathon', gaining experience in developing for the Microsoft Hololens. <br />
+  > Graduated with a BSc, Major in computer science, Minor in media design. <br />
+  > Joined Datacom (Wellington) as a .NET developer, working on a large enterprise software system. <br /></div>
+  <br />
+  
+  <span class="year">~2018</span><br />
+  <div class="year-text">
+  > Participated in 2 Hackathons, in one of which my team won 1st place. <br />
   </div>
-  <div ><!--main text-->
-    <div ><p ><img class='image' src="watch_colors.gif" width="50%" height="50%"  border="0px"></p></div>
-      <p class='paragraph'>The 'Relax' clock. designed to stop you worrying about individual minutes in a day. It is a purposefully vague clock, giving only a rough indication of the current minute or hour. This clock was designed to be both less than and more than a clock or timepiece. While this clock does allow you to keep track of the important times of your day, when those said times aren't urgently soon, it is more like an art-piece and exists only to please the eye and provide colour.
-      </p>
-      <p class='paragraph'>The colorscheme of the clock changes depending on the time of day. The two coloured discs on the watch face keep track of the current hour and minute. The line in the center of the face marks the current color band of each disc's time- this is intentionally vague, to stop you worrrying about each individual minute. <br>
-      The current color of the large disc, pointed to by the pointer (along with the sun outside) gives an indication of the current time of day, and rotates once every 24 hours. <br>
-      The smaller disc rotates once per minute, but apart from the constant movement, gives no indication of the exact time. 
-
-      </p>
-      <br style="clear:both" />
-
+  <br />
+  
+  <span class="year">~2019</span><br />
+  <div class="year-text">
+  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologys. <span style="color:#df83fe">(current)</span> <br />
   </div>
+  <br />
+  
+ </p>
 </div>
-
-<div class='break'></div>
-
-<div class='item'>
-  <div> <!--head section-->
-    <p class='align_left'>Project 2: 'Music Visualiser' </p>
-    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_2-music_visualiser' title='link to source code and instructions on how to get it running'>~github link</a></p>
-    <div style="clear: both;"></div>
-  </div>
-  <div ><!--main text-->
-    <div ><p ><img class='image' src="visualiser.gif" width="50%" height="50%"  border="0px"></p></div>
-      <p class='paragraph'>This is a relatively simple music visualiser, utilizing the 'Minim' API to get data about the currently playing song, and display a colorful equaliser. </p>
-      <br style="clear:both" />
-
-  </div>
-</div>
-
-<div class='break'></div>
-
-<div class='item'>
-  <div> 
-    <p class='align_left'>Project 3: Game</p>
-    <p><a class='align_right' href='https://github.com/RubenMagallanes/creative_coding_II_project_3-game' title='link to source code and instructions on how to get it running'>~github link</a></p>
-    <div style="clear: both;"></div>
-  </div>
-  <div >
-    <div ><p ><img class='image' src="game.gif" width="50%" height="50%"  border="0px"></p></div>
-      <p class='paragraph'>This is a simple 'wasd' + mouse based top-down shooter. It is purposely incredibly difficult to complete and quick to restart, this makes it pretty fun as it's a significant achievement to complete even one level.<br>
-      The difficulty is backed up by the music which i wrote to sound exciting and stressful. <a href="music.mp3" style="text-decoration: underline;">Music link</a>
-      </p>
-      <p>
-        The game utilizes a quad tree for hit-detection, as well as HashLists for storing and referencing game objects for efficiency. 
-      </p>
-      <br style="clear:both" />
-
-  </div>
-</div>
-
-<h4>MDDN243 - Introduction to game design</h4>
-<p class='descrip'> I received an 'A' grade for this course</p>
-
-<div class='break'></div>
-
-<div class='item'>
-  <div> 
-    <p class='align_left'>Game mechanic analysis presentation</p>
-    <p><a class='align_right' href='game_mechanic_presentation.pdf' title='direct link to a pdf of the presentation slides'>~link to pdf of presentation</a></p>
-    <div style="clear: both;"></div>
-  </div>
-  <div >
-    <div ><p ><img class='image' src="presentation.gif" width="50%" height="50%"  border="0px"></p></div>
-      <p class='paragraph'>This presentations was a small task to get us to analyse a few game mechanics and to get us thinking a bit deeper about the slight differences in the way a mechanic can be implemented.<br>
-      The task was to pick 3 game mechanics, and talk a bit about each. This included describing what the mechanic is, explaining the effects the mechanic has on a game it's implemented in and slight variations on the mechanic, using games where it is implemented as an example. <br>
-      
-       </p>
-      <br style="clear:both" />
-
-  </div>
-</div>
-
-<h4>SWEN 303 - Introduction to User Interface Design</h4>
-<p class='descrip'> </p>
-
-
-<div class='break'></div>
-
-<div class='item'>
-  <div> <!--head section-->
-    <p class='align_left'>UI design project - D3 demo</p>
-    <p>
-      <p class='align_right'>
-         <a  href='D3/index.html' title='links to an HTML D3 demo'>~link to demo page</a>
-         <a  href='https://github.com/RubenMagallanes/user_interface_dsdn-D3_demo' title='link to github page of source'>~Github link</a>
-      </p>
-    </p>
-    <div style="clear: both;"></div>
-  </div>
-  <div ><!--main text-->
-    <div ><p ><img class='image' src="UI.png" width="50%" height="50%"  border="0px"></p></div>
-      <p class='paragraph'>
-        This is a simple application to demonstrate an understand of the D3 javascript library. <br>
-        The task was to design an interface for a simple app that would be suitable for an "Optical head-mounted display", similar to Google's "Google Glass" project. The requirements included a simple interface that required only very basic controls- for example in the situation a user can only interect with their device with only swipe gestures. <br>
-        This Demo was implemented as an html page, becasue this allowed me to utilize the D3 javascript library, which is used to visualise data. <br><br>
-        The app is a simple weather viewer, displaying the weather for a day and city. The interface allows you to swipe between cities vertically and days horisontally. Swiping is represented here as the arrow buttons that border the interface. 
-
-      </p>
-      <br style="clear:both" />
-
-  </div>
-</div>
-
-
-<!--            'coming soon' footer thingie         -->
-<div class='break'></div>
-
-<div class='item' id='foot'>
-  <div> <!--head section-->
-    <p class='align_left'>~ More to come</p>
-    <p><a class='align_right' href='https://github.com/rubenmagallanes' title='my github'>~</a></p>
-    <div style="clear: both;"></div>
-  </div>
-  <div ><!--main text-->
-
-      <p class='paragraph'></p>
-      <br style="clear:both" />
-
-  </div>
-</div>
-
 
 </body>
 </html>
