add 2019 datacomp to bullet ppints

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   
   <span class="year">~2019</span><br />
   <div class="year-text">
-  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologys. <span style="color:#df83fe">(current)</span> <br />
+  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <span style="color:#df83fe">(current)</span> <br />
+  > Participated in my fourth Hackathon. Taking up a role as the team lead I encountered a different set of challenges than being a developer, and came away having learned lots & had heaps of fun. <br /> 
   </div>
   <br />
   
