add technologies up top, move links to bottom

--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
 
 <header id='head'>
   <h1>Ruben Magallanes</h1>
-  <h3>[ Software Developer ]</h3>
+  <h3>~ Software Engineer </h3>
+  <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud</h5>
   
-  <p id='links'>links<br>
-    <a href='https://github.com/RubenMagallanes'>~github</a>
-    <a href='https://nz.linkedin.com/in/rubenmagallanes'>~linkedin</a>
-  </p>
-
 </header>
 
 <div>
  <p>Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
  <p >
-  Brief: <br /><br />
+  Brief timeline: <br /><br />
   
   
   <span class="year">~2017</span><br />
@@ -48,6 +44,11 @@
   
  </p>
 </div>
+
+<p id='links'>links<br>
+  <a href='https://github.com/RubenMagallanes'>~github</a>
+  <a href='https://nz.linkedin.com/in/rubenmagallanes'>~linkedin</a>
+</p>
 
 </body>
 </html>
