change title to brief

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
+  <title>Ruben Magallanes Brief</title>
   <link href="style.css" rel="stylesheet" type="text/css" media="all">
   <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
 </head>
