move contact to bottom, put in box. change working in last paragraph

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <header id='head'>
   <h1>Ruben Magallanes</h1>
   <h3>~ Software Engineer </h3>
-  <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud</h5>
+  <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud / flexible</h5>
   
 </header>
 
 <div>
- <p>Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+ 
  <p >
   Brief timeline: <br /><br />
   
@@ -38,14 +38,16 @@
   <span class="year">~2019</span><br />
   <div class="year-text">
   > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <span style="color:#df83fe">(current)</span> <br />
-  > Participated in my fourth Hackathon. Taking up a role as the team lead I encountered a different set of challenges than being a developer, and came away having learned lots & had heaps of fun. <br /> 
+  > Participated in my fourth Hackathon. Took up a role as the team lead for a challenge different to my everyday work. <br /> 
   </div>
   <br />
   
  </p>
 </div>
+<div class="item"><p>Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+</div>
 
-<p id='links'>links<br>
+<p id='links'>other links<br>
   <a href='https://github.com/RubenMagallanes'>~github</a>
   <a href='https://nz.linkedin.com/in/rubenmagallanes'>~linkedin</a>
 </p>
