--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   
  </p>
 </div>
-<div class="item"><p>Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
-</div>
+<p class="item">Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+
 
 <p id='links'>other links<br>
   <a href='https://github.com/RubenMagallanes'>~github</a>
