remove .nz from linkedin link

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
  </p>
 </div>
 <p class="item">Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
-
+d
 
 <p id='links'>other links<br>
   <a href='https://github.com/RubenMagallanes'>~github</a>
-  <a href='https://nz.linkedin.com/in/rubenmagallanes'>~linkedin</a>
+  <a href='https://linkedin.com/in/rubenmagallanes'>~linkedin</a>
 </p>
 
 </body>
