flip timeline to most revent first

--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 
 <header id='head'>
   <h1>Ruben Magallanes</h1>
-  <h3>~ Software Engineer </h3>
+  <h3>~ Software Engineer @ Datacom</h3>
   <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud / flexible</h5>
   
 </header>
 
 <div>
  
- <p >
-  Brief timeline: <br /><br />
-  
-  
-  <span class="year">~2017</span><br />
-  <div class="year-text">
-  > Participated in an 'AR/VR Hackathon', gaining experience in developing for the Microsoft Hololens. <br />
-  > Graduated with a BSc, Major in computer science, Minor in media design. <br />
-  > Joined Datacom (Wellington) as a .NET developer, working on a large enterprise software system. <br /></div>
+
+  Career bullet points: <br /><br />
+
+  <span class="year">~2019-now</span>
+  <div class="year-text"> 
+  > Joined the 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <span style="color:#df83fe">(current engagement)</span> <br />
+  > Participated in my fourth Hackathon. Took up a role as the team lead for a challenge different to my everyday work. <br />  
+  </div>
   <br />
   
   <span class="year">~2018</span><br />
@@ -35,16 +34,17 @@
   </div>
   <br />
   
-  <span class="year">~2019</span><br />
+  <span class="year">~2017</span><br />
   <div class="year-text">
-  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <span style="color:#df83fe">(current)</span> <br />
-  > Participated in my fourth Hackathon. Took up a role as the team lead for a challenge different to my everyday work. <br /> 
-  </div>
+  > Graduated with a BSc, Major in computer science, Minor in media design. <br />
+  > Participated in an 'AR/VR Hackathon', gaining experience in developing for the Microsoft Hololens. <br />
+  > Joined Datacom (Wellington) as a .NET developer, working on a large enterprise software system. <br /></div>
   <br />
-  
- </p>
+
+
+ 
 </div>
-<p class="item">Happy to elabourate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+<p class="item">Happy to elaborate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
 
 <p id='links'>other links<br>
   <a href='https://github.com/RubenMagallanes'>~github</a>
