remove 'current engagement tag for mobile position'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header id='head'>
   <h1>Ruben Magallanes</h1>
-  <h3>~ Software Engineer @ Datacom</h3>
+  <h3>~ Software Engineer</h3>
   <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud / flexible</h5>
   
 </header>
@@ -21,9 +21,9 @@
 
   Career bullet points: <br /><br />
 
-  <span class="year">~2019-now</span>
+  <span class="year">~2019-2021</span>
   <div class="year-text"> 
-  > Joined the 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <span style="color:#df83fe">(current engagement)</span> <br />
+  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <!--span style="color:#df83fe">(current engagement)</span--> <br />
   > Participated in my fourth Hackathon. Took up a role as the team lead for a challenge different to my everyday work. <br />  
   </div>
   <br />
