update w derivatives trader exp

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <header id='head'>
   <h1>Ruben Magallanes</h1>
-  <h3>~ Software Engineer</h3>
-  <h5> .NET / Web API / HTML / CSS / Javascript / python / unix / git / cloud / flexible</h5>
+  <h3>~ Software / Derivatives </h3>
+  <h5> C# .NET / Python / HTML CSS Javascript / Unix / Git / SQL / Atlassian Suite / permanently learning</h5>
   
 </header>
 
@@ -21,9 +21,21 @@
 
   Career bullet points: <br /><br />
 
-  <span class="year">~2019-2021</span>
+  <span class="year">~2023</span>
+  <div class="year-text">
+  > Left Star Beta. Took some time off & started trading for myself.
+  </div>
+  <br />
+
+  <span class="year">~2022</span>
+  <div class="year-text">
+  > Joined Star Beta (Sydney, Aus) as a Derivatives Trader. Long hours, insanely challenging and engaging. 
+  </div>
+  <br />
+
+  <span class="year">~2019</span>
   <div class="year-text"> 
-  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a range of projects & technologies. <!--span style="color:#df83fe">(current engagement)</span--> <br />
+  > Joined the Datacom 'Mobile Innovation' team in Auckland, working on a wide range of projects & technologies. <!--span style="color:#df83fe">(current engagement)</span--> <br />
   > Participated in my fourth Hackathon. Took up a role as the team lead for a challenge different to my everyday work. <br />  
   </div>
   <br />
