remove linkedin link

--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
 
  
 </div>
-<p class="item">Happy to elaborate on any or all of this. Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
+<p class="item">Contact me at <a href="mailto:rubenmmm3+githubio@gmail.com">rubenmmm3+githubio@gmail.com</a></p>
 
 <p id='links'>other links<br>
   <a href='https://github.com/RubenMagallanes'>~github</a>
-  <a href='https://linkedin.com/in/rubenmagallanes'>~linkedin</a>
 </p>
 
 </body>
